<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center_horizontal">

    <include
        android:id="@+id/include"
        layout="@layout/frag_app_bar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/asset_normel_name_user_icon"
        android:layout_marginTop="@dimen/dimen_32dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit"
        android:textColor="@color/theme_blue"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimen_10"
        />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:background="@color/light_grey"
        android:layout_marginTop="@dimen/dimen_16"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/user_detailed_information"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/dimen_8"
            android:text="@string/display_name"
            android:layout_marginTop="@dimen/dimen_24"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_10"
            android:text="@string/email"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/call"
            android:drawablePadding="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_10"
            android:text="@string/phone_number"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvUserType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_10"
            android:text="@string/user_type"
            android:textSize="18sp" />





    </LinearLayout>

</LinearLayout>