<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_screen_background">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/dimen_250dp"
            android:layout_height="@dimen/dimen_250dp"
            android:src="@drawable/ic_asset_circle3"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvTourHead1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/super_fast"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:textSize="24sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hassle_free_and_super_fast_payments"
            android:layout_below="@+id/tvTourHead1"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginLeft="@dimen/dimen_32dp"
            android:layout_marginRight="@dimen/dimen_32dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"/>


    </RelativeLayout>

    <TextView
        android:id="@+id/tvGotIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_i_got_it"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:layout_marginRight="8dp"/>

</RelativeLayout>