<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/frag_app_bar"/>

        <ImageView
            android:layout_width="@dimen/dimen_80dp"
            android:layout_height="@dimen/dimen_80dp"
            android:src="@drawable/change_password_icon"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_20"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/etCurrentPassword"
                android:layout_width="@dimen/dimen_280"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/current_password"
                android:textSize="@dimen/dimen_14sp"
                android:inputType="textPersonName"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_18dp"
            android:layout_gravity="center"
            >
            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="@dimen/dimen_280"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/new_password"
                android:textSize="@dimen/dimen_14sp"
                android:inputType="textPersonName"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_18dp"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="@dimen/dimen_280"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:textSize="@dimen/dimen_14sp"
                android:inputType="textPersonName"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/dimen_280"
            android:layout_height="@dimen/dimen_50dp"
            android:background="@drawable/button_background"
            android:text="Save"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dimen_18dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dimen_10"
            android:textColor="@color/theme_blue"/>

    </LinearLayout>


</RelativeLayout>