<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/llUsersBottomBar"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:orientation="vertical"
    android:background="@color/white">


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_2dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/llBottomNavHomeUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_2dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivHome"
                android:layout_width="@dimen/dimen_32"
                android:layout_height="@dimen/dimen_32"
                android:src="@drawable/asset_normel_name_home_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:layout_marginTop="@dimen/dimen_2dp"
                android:textSize="@dimen/dimen_10sp"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/llBottomNavSettingsUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dimen_2dp"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivSettings"
                android:layout_width="@dimen/dimen_32"
                android:layout_height="@dimen/dimen_32"
                android:src="@drawable/asset_normel_name_setting_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_marginTop="@dimen/dimen_2dp"
                android:textSize="@dimen/dimen_10sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBottomNavMyAccountUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dimen_2dp"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivMyAccount"
                android:layout_width="@dimen/dimen_32"
                android:layout_height="@dimen/dimen_32"
                android:src="@drawable/asset_normel_name_user_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_account"
                android:layout_marginTop="@dimen/dimen_2dp"
                android:textSize="@dimen/dimen_10sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBottomNavLogoutUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_2dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivLogout"
                android:layout_width="@dimen/dimen_32"
                android:layout_height="@dimen/dimen_32"
                android:src="@drawable/asset_normel_name_logout_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_marginTop="@dimen/dimen_2dp"
                android:textSize="@dimen/dimen_10sp"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>