<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/frag_app_bar"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:background="@color/light_grey"
            android:layout_marginTop="@dimen/dimen_32dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                >

                <TextView
                    android:id="@+id/tvAvailabeBal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available_balance"
                    android:textSize="@dimen/dimen_16"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="₹ 134.20"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16"
                    android:layout_toRightOf="@+id/tvAvailabeBal"/>

            </RelativeLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/llAddMoneyAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="@dimen/dimen_10"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imageView"
                        android:orientation="horizontal"
                        android:weightSum="1"
                        android:id="@+id/radioGroup">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Me"
                            android:id="@+id/radioButton"
                            android:checked="false"
                            android:textSize="@dimen/dimen_12sp" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Dealer"
                            android:id="@+id/radioButton2"
                            android:checked="false"
                            android:layout_marginLeft="@dimen/dimen_20"
                            android:textSize="@dimen/dimen_12sp"
                            android:layout_weight="0.13" />


                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="User"
                            android:id="@+id/radioButton3"
                            android:checked="false"
                            android:layout_marginLeft="@dimen/dimen_20"
                            android:textSize="@dimen/dimen_12sp"
                            android:layout_weight="0.13" />


                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llSelectUsersSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_10"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Select User"
                        android:textColor="@color/black"
                        android:layout_marginRight="@dimen/dimen_16"/>

                    <Spinner
                        android:layout_width="@dimen/dimen_200dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAddMoneyDealer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="@dimen/dimen_10"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imageView"
                        android:orientation="horizontal"
                        android:weightSum="1"
                        android:id="@+id/radioGroup1">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Me"
                            android:id="@+id/radioButtonMe_Dealer"
                            android:checked="false"
                            android:textSize="@dimen/dimen_12sp" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Dealer"
                            android:id="@+id/radioButtonUser_Dealer"
                            android:checked="false"
                            android:layout_marginLeft="@dimen/dimen_20"
                            android:textSize="@dimen/dimen_12sp"
                            android:layout_weight="0.13" />


                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llSelectDealersUsersSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_10"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Select User"
                        android:textColor="@color/black"
                        android:layout_marginRight="@dimen/dimen_16"/>

                    <Spinner
                        android:layout_width="@dimen/dimen_200dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_20">

            <EditText
                android:id="@+id/etEnterAmt"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter Amount"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/coins"
                android:drawablePadding="@dimen/dimen_8"
                />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_24">

            <Button
                android:id="@+id/btn100Rs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_100"
                android:layout_marginRight="@dimen/dimen_20"
                android:background="@drawable/button_background_outline"
                />

            <Button
                android:id="@+id/btn200Rs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_200"
                android:layout_marginRight="@dimen/dimen_20"
                android:background="@drawable/button_background_outline"/>

            <Button
                android:id="@+id/btn300Rs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_300"
                android:background="@drawable/button_background_outline"/>

        </LinearLayout>


        <Button
            android:id="@+id/btnAddMoney"
            android:layout_width="@dimen/dimen_300dp"
            android:layout_height="@dimen/dimen_50dp"
            android:background="@drawable/button_background"
            android:layout_gravity="center"
            android:text="@string/add_money"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dimen_32"/>

    </LinearLayout>


</RelativeLayout>